# firmware

./: .gitignore  .gitmodules
.github/workflows/: lint.yml
esp32/: .gitignore  CMakeLists.txt  getStackTrace.py  partitions_custom.csv  platformio.ini  sdkconfig  sdkconfig.old
esp32/components/nanopb/: CMakeLists.txt  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
esp32/main/: CMakeLists.txt  CMakeLists.txt1  Constants.h  GetSensorData.cpp  GetSensorData.h  ScanResults.cpp  ScanResults.h  SensorDataStore.h  TypeOfDevice.h  getTime.cpp  getTime.h  idf_component.yml  main.cpp  secrets.h  setClock.h  uuid.h
esp32/main/exceptions/: StateException.cpp  WrongPacketException.cpp
esp32/main/lib/: log.h  mutex.h
esp32/main/lib/ArduinoSupport/: ArduinoSupport.cpp  ArduinoSupport.h  Preferences.cpp  Preferences.h
esp32/main/lib/websocket/: websocket.cpp  websocket.h
esp32/proto/: packet.proto
esp32/scripts/: build_protobuf.py
esp32/src/: BLEUtils.cpp  BLEUtils.h  ConnectionException.cpp  ConnectionException.h  Constants.h  DecodeException.cpp  DecodeException.h  DeviceType.h  GetClassSize.cpp  GetClassSize.h  GetCommandClass.cpp  GetCommandClass.h  GetSensorData.cpp  GetSensorData.h  GetSizeClass.cpp  GetSizeClass.h  GetWiFiStateSizeClass.cpp  GetWiFiStateSizeClass.h  GetWifiUsernamePasswordClass.cpp  GetWifiUsernamePasswordClass.h  HTTPSend.cpp  HTTPSend.h  InterruptedException.h  SendData.cpp  SendData.h  SendWifiDataClass.cpp  SendWifiDataClass.h  SensorDataStore.h  State.cpp  State.h  StateException.h  StateType.h  TypeOfDevice.h  WebDataPollingClient.cpp  WebDataPollingClient.h  WiFiState.h  WiFiStorage.cpp  WiFiStorage.h  getTime.cpp  getTime.h  (+5 more)
esp32/src/exceptions/: InterruptedException.cpp  InterruptedException.h  WrongPacketException.h
esp32/src/lib/: log.h  mutex.cpp  mutex.h
esp32/src/lib/websocket/: websocket.cpp  websocket.h
esp32/src/state/: Reader.cpp  Reader.h  State.cpp  State.h  StateType.h
esp32/test/: mutex_test.cpp  state_class_test.cpp  state_test.cpp
esp32/wasm-hub/: Cargo.toml  build.rs  readme.md
esp32/wasm-hub/go_test/: go.mod  runtime.go
esp32/wasm-hub/src/: constants.rs  controller.rs  lib.rs  setup.rs  sys.rs
esp32/wasm-hub/src/backend_to_firmware/: mod.rs
esp32/wasm-hub/src/libs/: mod.rs  mutex.rs  sleep.rs  time.rs
esp32/wasm-hub/src/protobuf/: mod.rs
esp32/wasm-hub/src/protobuf/fridgigator/: firmware_backend.rs  mod.rs
esp32/wasm-hub/src/protobufs/: mod.rs
esp32/wasm-hub/src/system/: mod.rs  safe_sys.rs  sys.rs
pico/: CMakeLists.txt  main.cpp
pico/dht/: dht.c
pico/dht/include/: dht.h
