[package]
name = "wasm-hub"
version = "0.1.0"
edition = "2021"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
linked_list_allocator = "0.10.4"
numtoa = "0.2.4"
[profile.release]
panic = "abort"
strip = "debuginfo"
lto = true
opt-level = 'z'
