[package]
name = "wasm-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
linked_list_allocator = "0.10.4"

numtoa = {version = "0.2.4", default_features = false }
prost = { version = "0.11.6", default_features = false,features = ["prost-derive"] }

[build-dependencies]
prost-build = { version = "0.11.6", default_features = false }
[profile.release]
debug = false
panic = "abort"
strip = "debuginfo"
lto = true
opt-level = 'z'
