[package]
name = "wasm-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
linked_list_allocator = "0.10.4"
numtoa = "0.2.4"
futures = {version = "0.3.26", default-features = false}
futures-lite = {version = "1.12.0", default-features = false }

prost = { version = "0.11.6", default_features = false,features = ["prost-derive"] }
cassette = "0.2.3"
heapless = "0.7.16"

[build-dependencies]
prost-build = { version = "0.11.6", default_features = false }

[profile.release]
debug = false
panic = "abort"
lto = true
opt-level = 'z'
strip = true
codegen-units = 1

[dev-dependencies]
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }

